quick css fix for treemaps overflow on zoom

--- a/src/index.less
+++ b/src/index.less
@@ -2,6 +2,7 @@
 
 .plottable {
   font-family: geomanist, 'sans-serif';
+  overflow: hidden ; // quick fix for  treemap on zoom overflow
   .foreground-container { overflow: visible}
   body {
     background: transparent;
